# rbpf

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  README_OLD.md
.github/workflows/: main.yml
benches/: elf_loader.rs  jit_compile.rs  memory_mapping.rs  vm_execution.rs
cli/: Cargo.toml
cli/src/: compare.rs  main.rs
doc/: bytecode.md
examples/: disassemble.rs  to_json.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: common.rs  dumb.rs  grammar_aware.rs  semantic_aware.rs  smart.rs  smart_jit_diff.rs  smarter_jit_diff.rs  verify_semantic_aware.rs
src/: assembler.rs  disassembler.rs  ebpf.rs  elf.rs  insn_builder.rs  interpreter.rs  jit.rs  lib.rs  memory_region.rs  program.rs  static_analysis.rs  tnum.rs  tnum_plus.rs  verifier.rs  vm.rs  wrapped_interval.rs  x86.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs  syscalls.rs
tests/: assembler.rs  compare.rs  disassembler.rs  elf.rs  execution.rs  exercise_instructions.rs  jit.rs  tnum.c  tnum.h  tnum_mul.c  tnum_mul.rs  tnum_test.cpp  tnum_test.rs  verifier.rs  verify_cpp.cpp  vm.rs
tests/elfs/: elfs.sh  strict_header.rs
